css/main.css
/*
 * A Clickfire Media digital execution
 * @Author - Jason Torden, Mili Kuo, Siwon Oh, Owen Corso
 * @Website - http://clickfiremedia.com
 * 
 * Built on top of HTML5 Boilerplate
 *
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html,
button,
input,
select,
textarea {
    color: #222;
}

body {
    font-size: 100%;
    line-height: 1.4;
	font-family: 'Helvetica', Arial, Verdana;
	padding: 0;
	color:#333;
}

/*
 * Remove text-shadow in selection highlight: h5bp.com/i
 * These selection declarations have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between images and the bottom of their containers: h5bp.com/i/440
 */

img {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Chrome Frame prompt
   ========================================================================== */

.chromeframe {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */
  
/*.fb_edge_widget_with_comment span.fb_edge_comment_widget iframe.fb_ltr {
display: none !important;
overflow:hidden;
}*/

/* ===============
    Smartphone (320px)
   =============== */

#content_wrap{
  	min-width:320px;
  	max-width:1200px;
  	position:relative;

}

.vertical_mode_show{
	padding: 14px 0 14px 0;
	display:block;
}

h2{
	font-size:1.6em;
	font-weight:lighter;
	line-height:30px;
	margin-bottom:5px;
}

/*TOP NAV*/

#top_nav{
	min-width:320px;
	font-size: .65em;
    font-weight: lighter;
    letter-spacing: 1px;
    padding: 2px 20px 0 0;
}

#collapse_share_module{
	margin-left:8%;
}

#top_main_nav{
	margin-left:2%;
}

#top_sub_nav{
	margin:12px 2% 0 0;
	display:none;
}

#top_sub_nav div{
	float:left;
}

#top_sub_nav > div{
	margin-left:10px;
}

.top_sub_nav_item > div{
	margin-left:5px;
	cursor: pointer;
}

.top_sub_nav_item > div:first-child{
	margin-left:0;
}

.dropdown-toggle, .dropdown-toggle a{
	color:#333333;
	outline: 0 none;
}

.navbar-inner{
	background-color:white;
	color:#333333;
	background-image:none;
	border:none;
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow:none;
}

.btn-navbar{
	color:#f38dab;
	text-shadow:none;
	background-color:#ffffff;
	background-image:none;
	filter:none;
	border-color:#ffffff;
	*background-color:#ffffff;
	filter:none;
}
	
.btn-navbar:hover,.btn-navbar:focus,.btn-navbar:active,.btn-navbar.active,.btn-navbar.disabled,.btn-navbar[disabled]{
	color:#333333;
	background-color:#ffffff;
	*background-color:#ffffff;

}
.btn-navbar:active,.btn-navbar.active{background-color:#ffffff \9;}

.navbar .nav > li > a {
    color: #333333;
    float: none;
    padding: 10px 15px;
    text-decoration: none;
    text-shadow: none;
}

.navbar .nav > li > a:hover,
.navbar .nav > li > a:focus {
    color: #f38dab;
    outline:none;
}

.navbar-fixed-top{margin-bottom:0px;}

.navbar .btn-navbar .icon-bar{
	display:block;
	width:25px;
	height:3px;
	background-color:#f38dab;
	-webkit-border-radius:0;
	-moz-border-radius:0;
	border-radius:0;
	-webkit-box-shadow:none;
	-moz-box-shadow:none;
	box-shadow:none;
}

.navbar .btn-navbar{
	float:right;
	margin-top:6px;
	padding:7px 10px;
	margin-left:5px;
	margin-right:-8px;
	color:#ffffff;
	text-shadow:none;
	background-color:#ffffff;
	background-image:none;
	border-color:transparent;
	-webkit-box-shadow:none;
	-moz-box-shadow:none;
	box-shadow:none}
	
.navbar .btn-navbar:hover,.navbar .btn-navbar:focus,.navbar .btn-navbar:active,.navbar .btn-navbar.active,.navbar .btn-navbar.disabled,.navbar .btn-navbar[disabled]{
	color:#ffffff;
	background-color:#ffffff;
	*background-color:#ffffff;
	}
.navbar .btn-navbar:active,.navbar .btn-navbar.active{
	background-color:#ffffff \9;
	}

#big_image{
	position:relative;
	color:white;
	min-height:275px;
	overflow: hidden;
}

#big_image img{
	position:absolute;
	top:0;
	left:0;
	max-width:100%;
}

#tagline{
	position:absolute;
	top:110px;
	left:0;
	text-align: center;
	width:100%;
}

.stronger_together{
	font-size:1.9em;
	line-height: 1.05em;
	font-family: "Times New Roman",Georgia,Serif;
	font-weight: lighter;
	margin-bottom: 5px;
}

.copy_text{
	max-width:320px;
	letter-spacing: 1px;
	display:inline-block;
	font-size:.7em;
	line-height: 1.4em;
	padding:0 8% 0 8%;
}



/*FEATURE AREA*/

#top_content{
	max-width:100%;
	min-height:390px;
	overflow:none;
}

#main_image{
	width:100%;
}

#main_image img{
	max-width:100%;
	height:auto;
	width: auto\9; /* ie8 */
}

#main_feature{
	width:100%;
}

#featured_header{
	background-color:#e7e7e7;
	height:35px;
}

#around_the_world{
	font-size:.8em;
	font-family: "Times New Roman",Georgia,Serif;
	float:left;
	margin: 9px 5px 0 10px;
	color:#555;
}

.featured_dot{
	margin:11px 0 0 5px;
	width:12px;
	height:12px;
	-moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    -khtml-border-radius: 50%;
    border-radius: 50%;	
    behavior: url(css/PIE.htc);
    float:left;
}

.featured_selected{
	background-color:#f38dab;
}
/* ... */

